WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214047
REGRESSION(
r263836
): [GStreamer] Debug ASSERT hits
https://bugs.webkit.org/show_bug.cgi?id=214047
Summary
REGRESSION(r263836): [GStreamer] Debug ASSERT hits
Philippe Normand
Reported
2020-07-07 09:08:26 PDT
In Debug test bots, several webrtc and fast/mediastream tests crash, webrtc/audio-video-element-playing.html for example. Thread 1 (Thread 0x7f552ffff700 (LWP 30445)): #0 0x00007f5698fd0202 in WTFCrash() () at ../../Source/WTF/wtf/Assertions.cpp:295 #1 0x00007f56a72f5ec3 in WTF::RefCountedBase::applyRefDerefThreadingCheck() const (this=0x7f55fc206f90) at DerivedSources/ForwardingHeaders/wtf/RefCounted.h:114 #2 0x00007f56a72f5f60 in WTF::RefCountedBase::derefBase() const (this=0x7f55fc206f90) at DerivedSources/ForwardingHeaders/wtf/RefCounted.h:130 #3 0x00007f56a8a295f9 in WTF::RefCounted<WebCore::MediaStreamTrackPrivate, std::default_delete<WebCore::MediaStreamTrackPrivate> >::deref() const (this=0x7f55fc206f90) at DerivedSources/ForwardingHeaders/wtf/RefCounted.h:189 #4 0x00007f56a8a28fe4 in WTF::derefIfNotNull<WebCore::MediaStreamTrackPrivate>(WebCore::MediaStreamTrackPrivate*) (ptr=0x7f55fc206f78) at DerivedSources/ForwardingHeaders/wtf/RefPtr.h:44 #5 0x00007f56a8a28422 in WTF::RefPtr<WebCore::MediaStreamTrackPrivate, WTF::DumbPtrTraits<WebCore::MediaStreamTrackPrivate> >::~RefPtr() (this=0x7f55a4084958, __in_chrg=<optimized out>) at DerivedSources/ForwardingHeaders/wtf/RefPtr.h:70 #6 0x00007f56a8a27e6c in ProbeData::~ProbeData() (this=0x7f55a4084948, __in_chrg=<optimized out>) at ../../Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:450 #7 0x00007f56a8a255fa in <lambda(gpointer)>::operator()(gpointer) const (__closure=0x0, data=0x7f55a4084948) at ../../Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:500 #8 0x00007f56a8a25627 in <lambda(gpointer)>::_FUN(gpointer) () at ../../Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:501 #9 0x00007f56923b6f7d in g_hook_free (hook_list=0x55e1719cb668, hook=0x7f5520009e40) at ../glib/ghook.c:302 #10 0x00007f56923b7486 in g_hook_next_valid (hook_list=<optimized out>, hook=<optimized out>, may_be_in_call=<optimized out>) at ../glib/ghook.c:757 #11 0x00007f56923b78ae in g_hook_list_marshal (hook_list=hook_list@entry=0x55e1719cb668, may_recurse=may_recurse@entry=1, marshaller=marshaller@entry=0x7f5692ce7440 <probe_hook_marshal>, data=data@entry=0x7f552fffe800) at ../glib/ghook.c:676 #12 0x00007f5692ce6ede in do_probe_callbacks (pad=pad@entry=0x55e1719cb5d0 [GstPad|src], info=<optimized out>, defaultval=defaultval@entry=GST_FLOW_OK) at ../gst/gstpad.c:3728 #13 0x00007f5692cea617 in gst_pad_push_event_unchecked (pad=pad@entry=0x55e1719cb5d0 [GstPad|src], event=0x7f5528024a30 [GstEvent], type=type@entry=GST_PAD_PROBE_TYPE_EVENT_DOWNSTREAM) at ../gst/gstpad.c:5376 #14 0x00007f5692ceabca in push_sticky (pad=pad@entry=0x55e1719cb5d0 [GstPad|src], ev=ev@entry=0x7f552fffea10, user_data=user_data@entry=0x7f552fffea80) at ../gst/gstevent.h:438 #15 0x00007f5692ce8520 in events_foreach (pad=pad@entry=0x55e1719cb5d0 [GstPad|src], func=func@entry=0x7f5692ceab70 <push_sticky>, user_data=user_data@entry=0x7f552fffea80) at ../gst/gstpad.c:608 #16 0x00007f5692cf3491 in check_sticky (event=0x7f5528024a30 [GstEvent], pad=0x55e1719cb5d0 [GstPad|src]) at ../gst/gstpad.c:3986 #17 0x00007f5692cf3491 in gst_pad_push_event (pad=0x55e1719cb5d0 [GstPad|src], event=event@entry=0x7f5528024a30 [GstEvent]) at ../gst/gstpad.c:5542 #18 0x00007f5692deda38 in gst_base_src_send_stream_start (src=src@entry=0x55e170dd1bd0 [GstAppSrc|appsrc4]) at ../libs/gst/base/gstbasesrc.c:916 #19 0x00007f5692dee2e8 in gst_base_src_send_stream_start (src=0x55e170dd1bd0 [GstAppSrc|appsrc4]) at ../libs/gst/base/gstbasesrc.c:3401 #20 0x00007f5692dee2e8 in gst_base_src_loop (pad=0x55e1719cb5d0 [GstPad|src]) at ../libs/gst/base/gstbasesrc.c:2797 #21 0x00007f5692d20be7 in gst_task_func (task=0x7f54e0002950 [GstTask|appsrc4:src]) at ../gst/gsttask.c:328 #22 0x00007f56923f2004 in g_thread_pool_thread_proxy (data=<optimized out>) at ../glib/gthreadpool.c:354 #23 0x00007f56923f1761 in g_thread_proxy (data=0x7f5528006b00) at ../glib/gthread.c:807 #24 0x00007f56934455e2 in start_thread (arg=<optimized out>) at pthread_create.c:479 #25 0x00007f56910d5473 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
Attachments
Patch
(5.13 KB, patch)
2020-07-07 09:11 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Patch
(5.13 KB, patch)
2020-07-07 09:17 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Patch
(5.13 KB, patch)
2020-07-08 00:41 PDT
,
Philippe Normand
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2020-07-07 09:11:51 PDT
Created
attachment 403696
[details]
Patch
Philippe Normand
Comment 2
2020-07-07 09:17:28 PDT
Created
attachment 403697
[details]
Patch
Xabier Rodríguez Calvar
Comment 3
2020-07-07 09:36:36 PDT
Comment on
attachment 403697
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=403697&action=review
> Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:450 > + ProbeData(GstElement* element, GstStaticPadTemplate* padTemplate, GRefPtr<GstTagList> tags, const char* trackId)
GRefPtr<GstTagList>&& tags
> Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:453 > + , tags(tags)
WTFMove
> Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:501 > + auto* data = new ProbeData(GST_ELEMENT_CAST(self), padTemplate, tags, track->id().utf8().data());
WTFMove
Philippe Normand
Comment 4
2020-07-08 00:41:30 PDT
Created
attachment 403762
[details]
Patch
EWS
Comment 5
2020-07-08 01:03:33 PDT
Committed
r264062
: <
https://trac.webkit.org/changeset/264062
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403762
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-07-08 01:04:17 PDT
<
rdar://problem/65213424
>
Philippe Normand
Comment 7
2020-07-08 04:06:10 PDT
***
Bug 214073
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug